--- a/fonts.html
+++ b/fonts.html
@@ -30,5 +30,7 @@
 <h3>SanSerif (generic_</h3>
 <p class="sanserif">the quick brown fox jumped over the lazy dog. This is a paragraph. <strong>This is heavier text.</strong> <em>This is emphasized text.</em> <strong><em>This is heavier and emphasized text.</em></strong></p>
 
+<h2>Findings</h2>
+<p>If woff2 is loaded before Woff, it will be preferred in both Chrome and Firefox.</p>
 </body>
 </html>
