Continued results findings. Should tabularize this.

--- a/fonts.html
+++ b/fonts.html
@@ -19,7 +19,7 @@
 <p class="questa">the quick brown fox jumped over the lazy dog. This is a paragraph. <strong>This is heavier text.</strong> <em>This is emphasized text.</em> <strong><em>This is heavier and emphasized text.</em></strong></p>
 <h3>Amerika Pro (EOT)</h3>
 <p class="america-pro">the quick brown fox jumped over the lazy dog. This is a paragraph. <strong>This is heavier text.</strong> <em>This is emphasized text.</em> <strong><em>This is heavier and emphasized text.</em></strong></p>
-<h3>Sant’Elia Script</h3>
+<h3>Sant’Elia Script (SVG)</h3>
 <p class="santelia">the quick brown fox jumped over the lazy dog. This is a paragraph. <strong>This is heavier text.</strong> <em>This is emphasized text.</em> <strong><em>This is heavier and emphasized text.</em></strong></p>
 <h3>Museo Sans 500 (woff2)</h3>
 <p class="museo-sans">the quick brown fox jumped over the lazy dog. This is a paragraph. <strong>This is heavier text.</strong> <em>This is emphasized text.</em> <strong><em>This is heavier and emphasized text.</em></strong></p>
@@ -32,5 +32,6 @@
 
 <h2>Findings</h2>
 <p>If woff2 is loaded before Woff, it will be preferred in both Chrome and Firefox.</p>
+<p>There doesn't seem to be much use for SVGs. Poor support, and even browsers that are supposed to support it didn't like the version I provided.</p>
 </body>
 </html>
